07.01.2024 Major updates. Wrong calculations for holdings sector is fixed. Basic technical analysis methods added to scoring dataset. (Not added to scoring results yet.)